# ai-practic

./: art.py  main.py  pyproject.toml
